# ai-agentic-framework

./: .env.example  .gitignore  Dockerfile  README.md  build.py  debug_workflow.py  docker-compose.yml  index.html  index.md  procedural_memory.json  publishing.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy_docs.yml
api/: agentic_framework.html  search.js
configs/: financial_analyst.yaml
docs/: build.py  publishing.md
docs/api/: agentic_framework.html  index.html
examples/: 01_basic_agent.py  02_multi_agent.py  03_financial_agent.py  04_advanced_financial_agent.py  05_langgraph_financial_agent.py  06_memory_agent.py  07_secure_agent.py  08_financial_multi_agent.py
saved_agents/: agent_51c8f06f.json  agent_66aadbd9.json  agent_a93fd08c.json  agent_b3c7e003.json  agent_fedce9ee.json
src/agentic_framework/: __init__.py  cli.py
src/agentic_framework/core/: __init__.py  agent.py  memory.py  state.py  tool.py
src/agentic_framework/factory/: __init__.py  agent_factory.py  config_loader.py
src/agentic_framework/llm/: __init__.py  base.py  openai_client.py
src/agentic_framework/memory/: episodic.py  multilayer.py  procedural.py  semantic.py  simple.py  vector.py
src/agentic_framework/observability/: telemetry.py
src/agentic_framework/orchestration/: workflow.py
src/agentic_framework/safety/: audit.py  guardrails.py  sandbox.py
src/agentic_framework/server/: main.py  models.py
src/agentic_framework/server/routers/: agents.py  components.py
src/agentic_framework/tools/: __init__.py  calculator.py  finance.py  mcp_adapter.py  python_repl.py  registry.py  search.py
src/agentic_framework/workflows/: dynamic_workflow.py
tests/: test_e2e.py
ui/agent-ui/: index.html  package-lock.json  package.json
ui/agent-ui/src/: App.jsx  index.css
ui/agent-ui/src/components/: AgentBuilder.jsx  AgentExecutionPage.jsx  AgentList.jsx  ChatInterface.jsx  CreateAgentPage.jsx  Sidebar.jsx  WorkflowBuilder.jsx  WorkflowSidebar.jsx
